JI-1072 Fix tick not showing up

--- a/styles/choice.css
+++ b/styles/choice.css
@@ -59,6 +59,9 @@
   margin-right: 5px;
   border-radius: 5px;
 }
+.h5p-choices-user.h5p-choices-answered.h5p-choices-user-correct.h5p-choices-no-correct {
+  background-color: #186df7;
+}
 
 .h5p-choices-user.h5p-choices-answered.h5p-choices-user-correct:before {
   font-family: 'h5p-reporting-icons';
